# big-finish-downloader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  Dockerfile  LICENCE  Readme.md  bin2h.cmake  conanfile.txt  gsettings.cmake  install.cmake
.github/workflows/: cmake-debug.yml  cmake-minsizerel.yml  cmake-release.yml  docker-build.yml  docker-latest.yml  linux-debug.yml  linux-headless.yml  linux-minsizerel.yml  linux-release.yml  windows-minsizerel.yml
big-finish-downloader-gtk/: CMakeLists.txt  settings.ini  uk.et1.big-finish.gschema.xml
big-finish-downloader-gtk/glade/: Login.glade  Login_Win32.glade  Main.glade  Main_Win32.glade  Preferences.glade  Preferences_Win32.glade
big-finish-downloader-gtk/include/: zip_helper.hpp
big-finish-downloader-gtk/include/libbf/: async_object.hpp
big-finish-downloader-gtk/include/libbf/gui/: alert_box.hpp  exceptions.hpp  secret_storage.hpp
big-finish-downloader-gtk/include/libbf/gui/modules/: login.hpp  main_window.hpp  preferences_window.hpp
big-finish-downloader-gtk/include/ui/: login.hpp
big-finish-downloader-gtk/src/: main.cpp  mime.cpp  winmain.cpp  zip.cpp
big-finish-downloader-gtk/src/gui/: alert_box.cpp  login.cpp
big-finish-downloader-gtk/src/gui/linkbutton/: linux.cpp  windows.cpp
big-finish-downloader-gtk/src/gui/main_window/: download.cpp  get_images.cpp  init.cpp  update_func.cpp
big-finish-downloader-gtk/src/gui/main_window/callbacks/: changed_dir.cpp  close.cpp  control_buttons.cpp  preferences.cpp  toggle_cb.cpp
big-finish-downloader-gtk/src/gui/main_window/init/: load_downloaded.cpp  widgets.cpp
big-finish-downloader-gtk/src/gui/preferences_window/: callbacks.cpp  init.cpp
big-finish-downloader-gtk/src/libsecret/: cookie_schema.cpp  secret_storage.cpp
big-finish-downloader-gtk/src/ui/: login.cpp
big-finish-downloader-server/: CMakeLists.txt  Readme.md
big-finish-downloader-server/include/: atomic_queue.hpp
big-finish-downloader-server/include/libbf/server/: api_server.hpp  server.hpp
big-finish-downloader-server/src/: main.cpp
big-finish-downloader-server/src/api_server/: add_login.cpp  errors.cpp  get_queue.cpp  get_status.cpp  init.cpp
big-finish-downloader-server/src/server/: download_loop.cpp  init.cpp  refresh_downloads.cpp
ext/: CMakeLists.txt
icons/: icons.rc
libbf/: CMakeLists.txt  Readme.md
libbf-gui/: CMakeLists.txt
libbf-gui/glade/: Login.glade
libbf-gui/include/libbf/gui/: secret_storage.hpp
libbf-gui/src/: cookie_schema.cpp  secret_storage.cpp
libbf-os/: CMakeLists.txt  uk.et1.big-finish.gschema.xml
libbf-os/include/: subprocess.hpp
libbf-os/include/libbf/os/: dirs.hpp  exceptions.hpp  logging.hpp  secret_storage.hpp  settings.hpp
libbf-os/src/: logging.cpp  settings.cpp
libbf-os/src/linux/: dirs.cpp  logging.cpp  settings.cpp
libbf-os/src/linux/libsecret/: cookie_schema.cpp  secret_storage.cpp
libbf-os/src/none/: os.cpp  secrets.cpp
libbf-os/src/windows/: dirs.cpp  logging.cpp  secrets.cpp
libbf/include/: utils.hpp
libbf/include/libbf/: downloads.hpp  exceptions.hpp  logging.hpp  login_cookie.hpp
libbf/src/: downloads.cpp  downloads_parse.cpp  downloads_scraper.cpp  logging.cpp  login.cpp  login_req.cpp
packaging/: Big-Finish-Downloader.desktop  PKGBUILD  uk.et1.big-finish-downloader.desktop  uk.et1.big-finish-downloader.metainfo.xml  uk.et1.big-finish-downloader.yaml
tests/: CMakeLists.txt  api_login_test.cpp  download_file_test.cpp  downloads_test.cpp  glade_login_test.cpp  json_test.cpp  login_test.cpp  secret_store_test.cpp
